Отправка событий в Kafka при создании/удалении пользователя